HelloUltraviolet/Fixtures/RejectedSource/Patterns/PatternDiagnosticsSupplement/Expected.uv
//! Expected diagnostic metadata for the PatternDiagnosticsSupplement rejected-source specimen.

expectedDiagnostic("E-SEM-2713", "diag.17.PatternDiagnosticsSupplement")
